--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ config/master.key
 
 # Only include if you have production secrets in this file, which is no longer a Rails default
 config/secrets.yml
+/db/schema.rb
 
 # dotenv
 # TODO Comment out this rule if environment variables can be committed
